// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell.List basis 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="corn-cell corn-f corn-ac"
    >
      <div
        class="corn-cell-label"
      >
        限时奖励
      </div>
      <div
        class="corn-cell-value"
      >
        <span
          class="taro-text corn-cell-placeholder"
        />
      </div>
      <div
        class="corn-cell-suffix corn-f corn-ac"
      />
    </div>
    <div
      class="corn-cell corn-f corn-ac"
    >
      <div
        class="corn-cell-label"
      >
        送葵花籽
      </div>
      <div
        class="corn-cell-value"
      >
        <span
          class="taro-text corn-cell-placeholder"
        />
      </div>
      <div
        class="corn-cell-suffix corn-f corn-ac"
      />
    </div>
  </div>
</div>
`;

exports[`Cell.List line 1`] = `
<div>
  <div
    class="corn-cell-list-line"
  >
    <div
      class="corn-cell corn-f corn-ac"
    >
      <div
        class="corn-cell-label"
      >
        限时奖励
      </div>
      <div
        class="corn-cell-value"
      >
        <span
          class="taro-text corn-cell-placeholder"
        />
      </div>
      <div
        class="corn-cell-suffix corn-f corn-ac"
      />
    </div>
    <div
      class="corn-cell corn-f corn-ac"
    >
      <div
        class="corn-cell-label"
      >
        送葵花籽
      </div>
      <div
        class="corn-cell-value"
      >
        <span
          class="taro-text corn-cell-placeholder"
        />
      </div>
      <div
        class="corn-cell-suffix corn-f corn-ac"
      />
    </div>
  </div>
</div>
`;
